# nps

./: .gitignore  .travis.yml  Doxyfile  Makefile.am  README  README.md  autogen.sh  configure.ac
lib/: Makefile.am  buffer.c  buffer.h  bytes.c  compare.c  compare.h  device.c  error.c  format.c  format.h  general.h  io.c  io.h  mainpage  memory.c  opts.h  parse.c  parse.h  parse_interval.c  priv.c  priv.h  proc.c  process.h  rc.c  rc.h  select.c  selectors.c  selectors.h  signal.c  split.c  sysinfo.c  sysinfo.h  t-buffer.c  t-bytes.c  t-compare.c  t-device.c  t-error.c  t-format.c  t-parse.c  t-priv.c  (+11 more)
lib/testdata-rc/: all  all.exp  comments  comments.exp  dup  ps_format.exp  whitespace  whitespace.exp
src/: Makefile.am  formatting.1  input.c  input.h  mkmanpage  nps-top.1  nps-top.1.in  nps.1  nps.1.in  opts.c  ps.c  snapshot.c  sysinfo.1  t-ps  threads.h  top.c
src/testdata/: all.expect  ancestor.expect  ancestor2.expect  comm.expect  csv.expect  devices  forest.expect  full.expect  group  group1.expect  group2.expect  group3.expect  group4.expect  group5.expect  help-format.expect  help-match.expect  help.expect  long.expect  not-session-leader.expect  passwd  pid.expect  pid2.expect  ppid.expect  ppid2.expect  raw.expect  sortrss.expect  sortrssasc.expect  sortvsize.expect  threads.expect  tty1.expect  tty2.expect  tty3.expect  user1.expect  user2.expect  user3.expect  user4.expect  with-terminal.expect
src/testdata/0/: meminfo  stat  uptime
src/testdata/0/1/: cmdline  smaps
src/testdata/0/10810/: stat
src/testdata/0/10813/: io
src/testdata/0/10857/: status
src/testdata/0/11935/: io  stat  status
src/testdata/0/12541/: status
src/testdata/0/12643/: status
src/testdata/0/12644/: status
src/testdata/0/12648/: stat
src/testdata/0/12649/: smaps
src/testdata/0/12655/: status
src/testdata/0/12813/: status
src/testdata/0/13108/: stat
src/testdata/0/13110/: status
src/testdata/0/13112/: smaps
src/testdata/0/13114/: stat
src/testdata/0/13332/: status
src/testdata/0/13979/: cmdline
src/testdata/0/1413/: stat
src/testdata/0/14296/: io  stat
src/testdata/0/14297/: cmdline
src/testdata/0/14309/: io  smaps
src/testdata/0/14388/: smaps  stat
src/testdata/0/1491/: stat  status
src/testdata/0/15/: stat  status
src/testdata/0/15379/: stat  status
src/testdata/0/1548/: stat
src/testdata/0/16014/: stat
src/testdata/0/16782/: stat  status
src/testdata/0/1693/: status
src/testdata/0/1695/: io  stat  status
src/testdata/0/1697/: io
src/testdata/0/1698/: status
src/testdata/0/1700/: stat
src/testdata/0/1703/: io  status
src/testdata/0/1706/: stat
src/testdata/0/17077/: io  status
src/testdata/0/17079/: status
src/testdata/0/17112/: stat
src/testdata/0/17259/: cmdline
src/testdata/0/17274/: io  stat  status
src/testdata/0/18133/: stat
src/testdata/0/187/: status
src/testdata/0/18776/: io  stat  status
src/testdata/0/191/: stat
src/testdata/0/20/: status
src/testdata/0/2042/: smaps
src/testdata/0/2061/: status
src/testdata/0/2067/: cmdline
src/testdata/0/21092/: cmdline  smaps  stat  status
src/testdata/0/2248/: io  smaps  stat
src/testdata/0/2251/: stat
src/testdata/0/23535/: stat  status
src/testdata/0/23541/: cmdline  io  stat  status
src/testdata/0/23542/: io
src/testdata/0/2368/: io
src/testdata/0/2423/: io  stat
src/testdata/0/2424/: status
src/testdata/0/2439/: io  stat
src/testdata/0/2455/: stat  status
src/testdata/0/2458/: status
src/testdata/0/2478/: io  smaps
src/testdata/0/25/: io
src/testdata/0/2522/: status
src/testdata/0/2542/: io
src/testdata/0/2621/: smaps
src/testdata/0/26306/: smaps
src/testdata/0/2631/: io  status
src/testdata/0/27/: status
src/testdata/0/273/: stat
src/testdata/0/2768/: stat
src/testdata/0/2769/: io
src/testdata/0/2891/: cmdline  status
src/testdata/0/29/: stat
src/testdata/0/3/: status
src/testdata/0/30070/: status
src/testdata/0/3067/: stat
src/testdata/0/3138/: smaps
src/testdata/0/3158/: io  smaps
src/testdata/0/31768/: smaps
src/testdata/0/3178/: io  stat  status
src/testdata/0/3179/: status
src/testdata/0/32152/: io  stat  status
src/testdata/0/32162/: io  smaps
src/testdata/0/3219/: cmdline
src/testdata/0/3225/: stat
src/testdata/0/3226/: smaps
src/testdata/0/3231/: io
src/testdata/0/3258/: cmdline  status
src/testdata/0/3282/: stat
src/testdata/0/3357/: stat
src/testdata/0/3359/: stat  status
src/testdata/0/3378/: smaps
src/testdata/0/3384/: stat
src/testdata/0/3385/: cmdline
src/testdata/0/3386/: smaps
src/testdata/0/358/: io  status
src/testdata/0/3627/: stat
src/testdata/0/3809/: stat
src/testdata/0/3887/: stat  status
src/testdata/0/4174/: status
src/testdata/0/475/: status
src/testdata/0/507/: stat  status
src/testdata/0/546/: status
src/testdata/0/547/: status
src/testdata/0/6/: stat
src/testdata/0/8/: stat
src/testdata/0/8134/: io
src/testdata/0/8140/: io
src/testdata/0/8143/: cmdline  io  stat
src/testdata/0/8150/: cmdline  io
src/testdata/0/8163/: stat
src/testdata/0/8724/: smaps
src/testdata/0/8726/: smaps
src/testdata/0/8748/: io  stat  status
src/testdata/0/8750/: io
src/testdata/0/9450/: stat
src/testdata/1/: loadavg  meminfo  stat  uptime
src/testdata/1/1/: io  stat
src/testdata/1/10810/: io
src/testdata/1/10857/: stat  status
src/testdata/1/11093/: io
src/testdata/1/11935/: io  stat  status
src/testdata/1/11940/: status
src/testdata/1/12533/: status
src/testdata/1/12540/: status
src/testdata/1/12541/: stat
src/testdata/1/12643/: io  stat
src/testdata/1/12646/: stat
src/testdata/1/12647/: smaps
src/testdata/1/12648/: io
src/testdata/1/12649/: io
src/testdata/1/12655/: io
src/testdata/1/13108/: io  status
src/testdata/1/13110/: io
src/testdata/1/13112/: io
src/testdata/1/13114/: io
src/testdata/1/13332/: stat
src/testdata/1/13982/: status
src/testdata/1/14296/: io  stat  status
src/testdata/1/14308/: io  smaps  (+1 more)
src/testdata/2/: loadavg  meminfo  stat  uptime
(+1142 files in other folders)
